--- a/Projeto.ipynb
+++ b/Projeto.ipynb
@@ -18,7 +18,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Utilização do Isolation Forest Para isolar as Possíveis Anomalias"
+    "#### Utilização do Isolation Forest Para isolar as Possíveis Anomalias\n",
+    "\n",
+    "Este trecho instala as bibliotecas pandas, scikit-learn e matplotlib, necessárias para manipulação de dados, visualizações, e o modelo de machine learning Isolation Forest."
    ]
   },
   {
@@ -89,7 +91,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Bibliotecas"
+    "#### Bibliotecas\n",
+    "\n",
+    "Importa as bibliotecas necessárias. pandas para manipulação de dados, matplotlib e seaborn para visualizações, IsolationForest para detectar anomalias, RandomForestClassifier para classificação supervisionada, PCA para redução de dimensionalidade, e funções de metrics para calcular precisão, revocação, e matriz de confusão."
    ]
   },
   {
@@ -112,7 +116,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Manipulação dos dados"
+    "#### Manipulação dos dados\n",
+    "\n",
+    "Carrega o conjunto de dados creditcard.csv e separa as variáveis preditoras (X) e a variável de classe (y). A coluna Class indica se a transação é uma fraude (1) ou normal (0)"
    ]
   },
   {
@@ -133,7 +139,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Pré-processamento dos dados"
+    "#### Pré-processamento dos dados\n",
+    "\n",
+    "Aplica o PCA para reduzir a dimensionalidade dos dados para 20 componentes principais. Os dois primeiros componentes são adicionados ao DataFrame para facilitar a visualização."
    ]
   },
   {
@@ -149,6 +157,13 @@
     "# Adicionar os componentes principais ao DataFrame\n",
     "df['PCA1'] = X_pca[:, 0]\n",
     "df['PCA2'] = X_pca[:, 1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualiza os dados antes da aplicação do Isolation Forest, utilizando os dois primeiros componentes principais."
    ]
   },
   {
@@ -182,7 +197,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Etapa 1: Isolar os Outliers com o Isolation Forest"
+    "#### Etapa 1: Isolar os Outliers com o Isolation Forest\n",
+    "\n",
+    "Aplica o Isolation Forest para identificar possíveis anomalias nos dados com uma taxa de contaminação de 2%. Rótulos de anomalias (-1 para outliers e 1 para normais) são adicionados ao DataFrame."
    ]
   },
   {
@@ -210,7 +227,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Avaliação do Isolation Forest"
+    "#### Avaliação do Isolation Forest\n",
+    "\n",
+    "Calcula as métricas de avaliação para o Isolation Forest. A precisão e a revocação medem o desempenho da detecção de anomalias."
    ]
   },
   {
@@ -238,6 +257,13 @@
     "\n",
     "print(f\"Precisão somente com o Isolation Forest: {precisionISO:.2f}\")\n",
     "print(f\"Revocação somente com o Isolation Forest: {recallISO:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exibe uma visualização dos dados após a aplicação do Isolation Forest, destacando os pontos identificados como anomalias em vermelho."
    ]
   },
   {
@@ -272,7 +298,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Etapa 2: Treinar o classificador para os Outliers que passaram pelo Isolation Forest"
+    "#### Etapa 2: Treinar o classificador para os Outliers que passaram pelo Isolation Forest\n",
+    "\n",
+    "Treina um classificador Random Forest para melhorar a precisão de classificação entre os outliers previamente identificados pelo Isolation Forest. Dividimos os dados em treino e teste e treinamos o modelo supervisionado."
    ]
   },
   {
@@ -298,7 +326,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Avaliação do Classificador (Trata-se do Random Forest)"
+    "#### Avaliação do Classificador (Trata-se do Random Forest)\n",
+    "\n",
+    "Avalia o modelo Random Forest com as métricas de precisão e revocação, medindo o desempenho do classificador em distinguir fraudes dos dados normais."
    ]
   },
   {
@@ -323,6 +353,13 @@
     "# Resultados\n",
     "print(f\"Precisão após classificador supervisionado: {precision:.2f}\")\n",
     "print(f\"Revocação após classificador supervisionado: {recall:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calcula a matriz de confusão para avaliar o desempenho do classificador Random Forest em uma visualização de mapa de calor."
    ]
   },
   {
